# Sonic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: AudioPlayer.hpp  SonicUI.hpp  Utils.hpp
src/: AudioPlayer.cpp  CMakeLists.txt  SonicUI.cpp  main.cpp
